three&four_sections

--- a/src/index.html
+++ b/src/index.html
@@ -77,5 +77,74 @@
 		</div>
   </section>
 
+  <section class="finish">
+	  <div class="container">
+		<h2 class="finish_header">По окончании обучения Вы сможете!</h2>
+		<div class="finish_divider"></div>
+
+		<div class="finish_wrapper">
+			<div class="finish_item">
+				<div class="finish_round">
+					<img src="icons/finish_icon_1.png" alt="1" class="finish_icon">
+				</div>
+				<div class="finish_descr">Создать свой сайт или блог</div>
+			</div>
+			<div class="finish_item">
+				<div class="finish_round">
+					<img src="icons/finish_icon_2.png" alt="2" class="finish_icon">
+				</div>
+				<div class="finish_descr">Правильно его оптимизировать</div>
+			</div>
+			<div class="finish_item">
+				<div class="finish_round">
+					<img src="icons/finish_icon_3.png" alt="3" class="finish_icon">
+				</div>
+				<div class="finish_descr">Обеспечить ему медленный, но верный рост в ТОП</div>
+			</div>
+			<div class="finish_item">
+				<div class="finish_round">
+					<img src="icons/finish_icon_4.png" alt="4" class="finish_icon">
+				</div>
+				<div class="finish_descr">Достигнуть стабильного прироста посетителей</div>
+			</div>
+			<div class="finish_item">
+				<div class="finish_round">
+					<img src="icons/finish_icon_5.png" alt="5" class="finish_icon">
+				</div>
+				<div class="finish_descr">Получать ощутимую прибыль</div>
+			</div>
+		</div>
+	  </div>
+  </section>
+
+  <section class="gift">
+	  <div class="container">
+		<div class="present">
+			<img src="img/Rectangle.png" alt="present" class="present_img">
+			<h2 class="gift_text">Для всех участников интенсива предусмотрены бонусы и подарки. Нажимайте на кнопку ниже, принимайте участие в вебинарах и забирайте свой приз по окончании обучения!</h2>
+		</div>
+		<button class="gift_btn">Записаться на интенсив!</button>
+	  </div>
+  </section>
+
+  <section class="webinar">
+		<div class="container">
+			<img src="img/waitings/first.png" alt="first" class="webinar_img">
+			<div class="webinar_descr">Первый вебинар состоится:</div>
+			<h2 class="webinar_header">10 сентября в 20:00 по Москве</h2>
+			<div class="webinar_subheader">Успейте записаться, количество мест ограничено!</div>
+		</div>
+	</section>
+
+	<section class="footer">
+		<div class="info">
+			<div class="info_links">
+				<a href="#" class="underline">Служба поддержки</a>
+				|
+				<a href="#" class="underline">Политика конфиденциальности</a>
+				<p>Позвоните нам <a href="tel:+88005550121">8-800-555-01-21</a></p>
+			</div>
+		</div>
+	</section>
 </body>
 </html>
